# lora_basics_modem_ports

./: CMakeLists.txt  LICENSE  Readme.md
.github/workflows/: cmake-multi-platform.yml
boards/common/: mcu_hal.h
boards/linux/hal/: mcu_hal.cpp
boards/linux/radio_hal/: ral_sx126x_bsp.c
boards/pico/hal/: hal.c  hal.h  lora.code-workspace  mcu_hal.c  mcu_pico_hal.h
boards/pico/modem_hal/: smtc_modem_hal_pico.c
boards/pico/radio_hal/: ral_sx126x_bsp.c  sx126x_pico_radio_hal.c
boards/rpi/hal/: hal.cpp  hal.h  mcu_hal.cpp
boards/rpi/modem_hal/: smtc_modem_hal_linux.c
boards/rpi/radio_hal/: ral_sx126x_bsp.c
examples/: CMakeLists.txt
examples/lorawan/: CMakeLists.txt
examples/lorawan/otaa_example/: CMakeLists.txt  otaa_example.cpp
examples/otaa_uplink/: CMakeLists.txt  otaa_uplink.cpp
examples/ping_pong/: CMakeLists.txt  ping_pong.cpp
examples/pingpong/: ping_pong.cpp  radio_app.h
test/: CMakeLists.txt  test_modem.cpp  tests.cpp  tests.h
